fixed overflowing issues on sections

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -164,8 +164,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#454545', end
 }*/
 .about {
   width: 90%;
-  height: 80vh;
-  margin: 2em auto; }
+  margin: 2em auto 15em auto; }
   @media (max-width: 1024px) {
     .about {
       height: 70vh; } }
