--- a/assets/css/sections/about.scss
+++ b/assets/css/sections/about.scss
@@ -1,7 +1,6 @@
 .about{
   width: 90%;
-  height: 80vh;
-  margin: 2em auto;
+  margin: 2em auto 15em auto;
 
   @include desktop-laptop{
     height: 70vh;
